# nyx-lab

./: .gitignore  .gitlab-ci.yml  LISENSE.txt  README.md  deploy.sh  eslint.config.js  get-icons.js  index.html  package.json  patch_aladin.sh  vite.config.js
.github/workflows/: deploy.yml
app/: eslint.config.js  get-icons.js  hip_dat_to_json.py  index.html  ngc_csv_to_json.py  vite.config.js
app/public/resources/landscapes/zero/: properties
app/src/: App.vue  main.js  pollux-skymap.js  router.js  stellarium-web-engine.js
app/src/assets/: app.css  app.scss  pollux-skymap.wasm
app/src/catalogs/: NGC.json  catalog_cds.js  catalog_hip.js  catalog_ngc.js  catalog_sim.js  utilities.js
app/src/components/: Addons.vue  AladinMap.vue  ObjectInfo.vue  ObjectPic.vue  SkyMap.vue  SkyObject.vue  Splitter.vue  Stellarium.vue
app/src/plugins/: addon.js  dialog.js  input.js  locker.js
app/src/stores/: config.js
app/src/views/: AstroView.vue  ConfigView.vue  HomeView.vue  MonitoringView.vue  NodeRedView.vue  SetupView.vue  SkyAtlasView.vue  SkyMapView.vue
app/tools/: hip_dat_to_json.py  ngc_csv_to_json.py
src/: App.vue  main.js  router.js
src-tauri/: Cargo.toml  tauri  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs
src/assets/: app.css  app.scss  icons.json
src/components/: AddonTable.vue  Addons.vue  AladinMap.vue  AppCache.vue  Cache.vue  ControlOption.vue  InterfacePanels.vue  NyxAddons.vue  UserDashboardTable.vue  UserInterfaceTable.vue  UserInterfaces.vue  WebPageTable.vue  WebPages.vue
src/plugins/: addon.js  dialog.js  geolocation.js  input.js
src/stores/: config.js
src/views/: ConfigView.vue  ExternalView.vue  HomeView.vue  InterfaceView.vue  MonitoringView.vue  NodeRedView.vue  SkyMapView.vue
tauri/: Cargo.toml  build.rs  build_icons.sh  tauri.conf.json
tauri/capabilities/: desktop.json
tauri/icons/: build.sh  icon.icns
tauri/src/: lib.rs  main.rs
