[package]
name = "nyx-dashboard"
version = "1.0.0"
description = "Nyx Dashboard"
authors = ["Jérôme ODIER"]
license = "GPL"
repository = "https://gitlab.in2p3.fr/lpsc-kid/nyx-dashboard"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nyxdashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["devtools"] }
tauri-plugin = "2.4.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-geolocation = "2.3.0"
tauri-plugin-http = { version = "2.5.2", features = ["blocking"] }
tauri-plugin-notification = "2.3.1"
tauri-plugin-os = "2.3.1"
tauri-plugin-shell = "2.3.1"
tauri-plugin-store = "2.4.0"
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warp = { version = "0.4.2", features = ["server"] }
bytes = "1.10.1"
