[package]
name = "pollux"
version = "1.0.0"
description = "Pollux"
authors = ["Jérôme ODIER"]
license = "AGPL"
repository = "https://gitlab.in2p3.fr/lpsc-kid/indi-dashboard"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pollux_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
