[package]
name = "nyx-dashboard"
version = "1.0.0"
description = "Nyx Dashboard"
authors = ["Jérôme ODIER"]
license = "AGPL"
repository = "https://gitlab.in2p3.fr/lpsc-kid/nyx-dashboard"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pollux_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
tauri-plugin-notification = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"

[dependencies]
tauri = { version = "2.0.0-beta", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
mime = "0.3.17"
mime_guess = "2.0.5"
